fixing toDo for intelliJ in services